Resolved errors and added some extra test methods